<resources>
    <string name="app_name">StarWarsQuiz</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="title_activity_score">ScoreActivity</string>
    <string name="submit">Submit</string>
    <string name="toLoad">Loading</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="play_again">Play again</string>
    <string name="ans_quest_one">Please choose an answer for Question 1</string>
    <string name="ans_quest_two">Please choose an answer for Question 2</string>
    <string name="ans_quest_three">Please type an answer for Question 3</string>
    <string name="ans_quest_four">Please choose an answer for Question 4</string>
    <string name="ans_quest_five">Please choose two answers for Question 5</string>
    <string name="no_name">Please enter your name</string>
    <string name="quest1">1. Where did Luke Skywalker grow up?</string>
    <string name="ans1a">Tatooine</string>
    <string name="ans1b">Earth</string>
    <string name="ans1c">Alderaan</string>
    <string name="ans1d">Naboo</string>
    <string name="quest2">2. What was the first clone wars battle called?</string>
    <string name="ans2a">The Battle of Endor</string>
    <string name="ans2b">The Battle of Geonosis</string>
    <string name="ans2c">The Battle of Coruscant</string>
    <string name="ans2d">The Battle of Talus</string>
    <string name="quest3">3. What weapon does a Jedi use?</string>
    <string name="ans3">lightsaber</string>
    <string name="answer">Answer</string>
    <string name="quest4">4. Who is Kylo Ren\'s father?</string>
    <string name="ans4a">Chewbaca</string>
    <string name="ans4b">Darth Vader</string>
    <string name="ans4c">Han Solo</string>
    <string name="ans4d">Boba Fett</string>
    <string name="quest5">5. Select two of Star War\'s furry species</string>
    <string name="ans5a">Ewok</string>
    <string name="ans5b">Hutt</string>
    <string name="ans5c">Wookie</string>
    <string name="ans5d">Boba Fett</string>
    <string name="fiveScore">Excellent work </string>
    <string name="fourScore">Good work </string>
    <string name="threeScore">You did okay </string>
    <string name="twoScore">That wasn\'t a great score </string>
    <string name="oneScore">Oh dear, what happened </string>
    <string name="noScore">Oops, that\'s embarrassing </string>
    <string name="youScored">you scored </string>
    <string name="outOf">out of 5.</string>
    <string name="selectAnswer">Please make sure to answer all questions</string>
    <string name="jedi_question">Do you have what it takes  to be a Jedi?</string>
    <string name="start">Start</string>
    <string name="enter_name">Enter Name</string>

</resources>
